# libigl

./: CMakeLists.txt
cmake/: libigl.cmake
experiments/: CMakeLists.txt
experiments/CleanIntersection/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshFacet.h  MeshIntersections.cpp  MeshVertex.h  main.cpp
